--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.2.1
+  shared_preferences: ^2.0.8
 
 
   # The following adds the Cupertino Icons font to your application.
