--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   http: ^1.2.1
   shared_preferences: ^2.0.8
+  image_picker: ^0.8.4+4
+  permission_handler: ^10.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
