--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,9 @@ dependencies:
     sdk: flutter
   http: ^1.2.1
   shared_preferences: ^2.0.8
-  image_picker: ^0.8.4+4
-  permission_handler: ^10.3.0
+  image_picker: ^1.1.0
+  permission_handler: ^11.3.1
+
 
 
   # The following adds the Cupertino Icons font to your application.
