--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   shared_preferences: ^2.0.8
   image_picker: ^1.1.0
   permission_handler: ^11.3.1
+  share_plus: ^8.0.3
+  path_provider: ^2.1.3
 
 
 
