--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   permission_handler: ^11.3.1
   share_plus: ^8.0.3
   path_provider: ^2.1.3
+  intl: ^0.19.0 #for date time formatting
 
 
 
