--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   share_plus: ^8.0.3
   path_provider: ^2.1.3
   intl: ^0.19.0 #for date time formatting
+  connectivity_plus: ^6.0.2 #for check internet connection
 
 
 
