--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   path_provider: ^2.1.3
   intl: ^0.19.0 #for date time formatting
   connectivity_plus: ^6.0.2 #for check internet connection
+  sqflite: ^2.3.3
+
 
 
 
